# shield

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  findings.sarif  pyproject.toml  shield-results.sarif
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
apps/api/: pyproject.toml
apps/cli/: MANIFEST.in  README.md  pyproject.toml
apps/cli/shield/: __init__.py  main.py  normalizer_stub.py
apps/cli/shield/commands/: __init__.py  auth.py  config.py  scan.py
apps/cli/shield/core/: __init__.py  output.py
apps/cli/shield/formatters/: __init__.py  sarif.py  terminal.py
apps/cli/tests/: test_bandit.py  test_exclusion.py  test_normalizer.py  test_pip_audit.py  test_safety.py  test_secrets.py  test_semgrep.py
