# Shield API package configuration.
# FastAPI backend — served via uvicorn, async SQLAlchemy, ARQ job queue.
# Phase 2+: requires a running PostgreSQL and Redis instance.

[project]
name = "shield-api"
version = "0.1.0"
description = "Shield AI — FastAPI backend for scan orchestration and AI remediation."
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.111.0",               # ASGI web framework
    "uvicorn[standard]>=0.29.0",      # ASGI server with websockets + reload
    "sqlalchemy[asyncio]>=2.0.0",     # Async ORM — do NOT use sync SQLAlchemy
    "alembic>=1.13.0",                # DB migrations
    "asyncpg>=0.29.0",                # Async PostgreSQL driver for SQLAlchemy
    "pydantic>=2.7.0",                # Data validation (v2 — do NOT use v1)
    "httpx>=0.27.0",                  # Async HTTP client (GitHub API, outbound calls)
    "arq>=0.26.0",                    # Background job queue backed by Redis (NOT Celery)
    "python-jose[cryptography]>=3.3.0", # JWT validation for Clerk tokens
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shield_api"]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]
