# Velonus CLI package configuration.
# Published to PyPI as `velonus` — install with: pip install velonus
# Entry point: `velonus` command maps to shield.main:app

[project]
name = "velonus"
version = "1.0.0-alpha.1"
description = "AI-native security copilot for Python developers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ali Ammar" }]
keywords = [
    "security",
    "appsec",
    "sast",
    "devsecops",
    "python",
    "semgrep",
    "bandit",
    "vulnerability-scanner",
    "secret-detection",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
homepage = "https://github.com/AliAmmar15/Velonus"
repository = "https://github.com/AliAmmar15/Velonus"

dependencies = [
    "typer>=0.12.0",          # CLI framework — locked, do not swap for click directly
    "rich>=13.7.0",           # Terminal output — tables, spinners, color
    "httpx>=0.27.0",          # Async HTTP client for API calls (Phase 2+)
    "bandit>=1.7.0",          # Python AST static analysis — required scanner tool
    "pip-audit>=2.7.0",       # Dependency CVE audit (PyPI/OSV) — required scanner tool
    "safety>=3.0.0",          # Dependency vulnerability DB (Safety DB) — required scanner tool
]

[project.optional-dependencies]
# semgrep is large (~200 MB) and not required for basic scanning.
# Install with: pip install velonus[semgrep]
semgrep = [
    "semgrep>=1.0.0",
]

[project.scripts]
velonus = "shield.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.4.0",            # Replaces black + isort + flake8 — do NOT add those
    "mypy>=1.10.0",           # Strict type checking
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["shield"]

[tool.mypy]
strict = true
python_version = "3.12"
